--- a/checkman3/src/main/resources/messages_uk.properties
+++ b/checkman3/src/main/resources/messages_uk.properties
@@ -45,3 +45,5 @@ deal.new.transportation=\u0414\u043E\u0434\u0430\u0442\u0438 \u0430\u0432\u0442\
 deal.new.carriage=\u0414\u043E\u0434\u0430\u0442\u0438 \u0432\u0430\u0433\u043E\u043D
 customer.we=\u0421\u0417\u041F\u0422
 customer.counterparty=\u041A\u043E\u043D\u0442\u0440\u0430\u0433\u0435\u043D\u0442
+menu.transportations=\u0422\u0440\u0430\u043D\u0441\u043F\u043E\u0440\u0442
+title.transport=\u0422\u0440\u0430\u043D\u0441\u043F\u043E\u0440\u0442
