--- a/spedition/SpeditionClient/app/src/main/res/values/strings.xml
+++ b/spedition/SpeditionClient/app/src/main/res/values/strings.xml
@@ -72,7 +72,9 @@
     <string name="forename">Ім’я</string>
     <string name="phones_edit_title">Редагування телефонів</string>
     <string name="show_title">Перегляд</string>
-    <string name="addBaseWeight">Вага на заводі</string>
+    <string name="ownWeight">Вага на заводі</string>
+    <string name="ownWeightAdd">Додати вагу на заводі</string>
+    <string name="counterpartyWeight"></string>
     <string name="weightTitle">Редагування ваги</string>
     <string name="copy">Копіювати</string>
     <string name="fixArriveTime">Зафіксувати час прибуття</string>
@@ -81,5 +83,23 @@
     <string name="sync_queston">Синхронізувати дані з сервером перед початком роботи?</string>
     <string name="yes">Так</string>
     <string name="no">Ні</string>
+    <string name="Y">Y</string>
+    <string name="plus">+</string>
+    <string name="driver_add">Додати водія</string>
     <string name="times">✕</string>
+    <string name="press_for_driver">Натисніть для редагування даних водія</string>
+    <string name="driver_add_info">Додати інформацію про водія</string>
+    <string name="detail_edit_title">Дані перевезення</string>
+    <string name="long_string">ABSDEFGHIJKLMNOPQRSTUVWXYZ0123456789!@#$%^*</string>
+    <string name="sync_products">Завантаження продукції</string>
+    <string name="sync_drivers">Завантаження списку водіїв</string>
+    <string name="sync_success">Синхронізація пройшла успішно</string>
+    <string name="sync_error">Помилка синхронізації</string>
+    <string name="sync_counterparty">Завантаження списку контрагентів</string>
+    <string name="driver_edit">Редагування водія</string>
+    <string name="remove_report">✕ Видалити звіт</string>
+    <string name="insert_driver_name">Введіть ім’я водія</string>
+    <string name="remove_title">Видалення</string>
+    <string name="remove_report_message">Бажаєте видалити звіт?</string>
+    <string name="report_remove_success">Звіт видалено</string>
 </resources>
