--- a/spedition/SpeditionClient/app/src/main/res/values/strings.xml
+++ b/spedition/SpeditionClient/app/src/main/res/values/strings.xml
@@ -103,4 +103,5 @@
     <string name="remove_title">Видалення</string>
     <string name="remove_report_message">Бажаєте видалити звіт?</string>
     <string name="report_remove_success">Звіт видалено</string>
+    <string name="press_for_weight">Вага не вказана</string>
 </resources>
