--- a/spedition/SpeditionClient/app/src/main/res/values/strings.xml
+++ b/spedition/SpeditionClient/app/src/main/res/values/strings.xml
@@ -104,4 +104,5 @@
     <string name="remove_report_message">Бажаєте видалити звіт?</string>
     <string name="report_remove_success">Звіт видалено</string>
     <string name="press_for_weight">Вага не вказана</string>
+    <string name="tables">DB View</string>
 </resources>
