--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -994,3 +994,8 @@ deals=\u0423\u0433\u043E\u0434\u0438
 transportation.counterparty.add=\u0414\u043E\u0434\u0430\u0442\u0438 \u043A\u043E\u043D\u0442\u0440\u0430\u043A\u0442
 change.view=\u0417\u043C\u0456\u043D\u0438\u0442\u0438 \u0432\u0438\u0434
 title.laboratory.edit=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u043D\u043D\u044F \u0430\u043D\u0430\u043B\u0456\u0437\u0456\u0432
+notification.transportation.for=\u0434\u043B\u044F
+notification.transportation.on=\u041D\u0430
+notification.transportation.income.vehicle=\u043F\u0440\u0438\u0431\u0443\u0432 \u0430\u0432\u0442\u043E\u043C\u043E\u0431\u0456\u043B\u044C
+notification.transportation.driver=\u0432\u043E\u0434\u0456\u0439
+notification.transportation.out.of.territory=\u0417\u043D\u0430\u0445\u043E\u0434\u0438\u0442\u044C\u0441\u044F \u0437\u0430 \u0442\u0435\u0440\u0438\u0442\u043E\u0440\u0456\u0454\u044E \u0437\u0430\u0432\u043E\u0434\u0443
