--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -132,11 +132,11 @@ title.cake.edit=\u0410\u043D\u0430\u043B\u0456\u0437 \u0448\u0440\u043E\u0442\u0
 sun=\u0421\u043E\u043D\u044F\u0448\u043D\u0438\u043A
 oil=\u041E\u043B\u0456\u044F
 cake=\u041C\u0430\u043A\u0443\u0445\u0430
-bot.transport.registration=\u041D\u0430 %1$s %2$s *\u043F\u0440\u0438\u0431\u0443\u0432* \u0430\u0432\u0442\u043E\u043C\u043E\u0431\u0456\u043B\u044C,\n\
-  \u0432\u043E\u0434\u0456\u0439 %3$s, *%4$s*.\n\
+bot.transport.registration=\u041D\u0430 %1$s *\u043F\u0440\u0438\u0431\u0443\u0432* \u0430\u0432\u0442\u043E\u043C\u043E\u0431\u0456\u043B\u044C,\n\
+  \u0432\u043E\u0434\u0456\u0439 %2$s, *%3$s*.\n\
   \u0417\u043D\u0430\u0445\u043E\u0434\u0438\u0442\u044C\u0441\u044F \u0437\u0430 \u0442\u0435\u0440\u0438\u0442\u043E\u0440\u0456\u0454\u044E \u0437\u0430\u0432\u043E\u0434\u0443.
-bot.transport.into=\u041D\u0430 %1$s %2$s *\u0437\u0430\u0457\u0445\u0430\u0432* \u0430\u0432\u0442\u043E\u043C\u043E\u0431\u0456\u043B\u044C,\n\
-  \u0432\u043E\u0434\u0456\u0439 %3$s, *%4$s*.
+bot.transport.into=\u041D\u0430 %1$s *\u0437\u0430\u0457\u0445\u0430\u0432* \u0430\u0432\u0442\u043E\u043C\u043E\u0431\u0456\u043B\u044C,\n\
+  \u0432\u043E\u0434\u0456\u0439 %2$s, *%3$s*.
 bot.transport.weight=*%1$s* \u0430\u0432\u0442\u043E\u043C\u043E\u0431\u0456\u043B\u044C,\n\
   \u0432\u043E\u0434\u0456\u0439 %2$s,\n\
   *%3$s*. %4$s.\n\
@@ -309,7 +309,7 @@ bot.token.doesnt.need=\u0422\u043E\u043A\u0435\u043D \u0431\u0456\u043B\u044C\u0
 bot.notificator.transport=\u041A\u043E\u043D\u0442\u0440\u0430\u0433\u0435\u043D\u0442: *%1$s*\n\
   \u0412\u043E\u0434\u0456\u0439: %2$s\n\
   \u041F\u0440\u043E\u0434\u0443\u043A\u0446\u0456\u044F: %3$s\n\
-  -------------------------
+  -------------------------\n\
 bot.notificator.transport.in=\u0417\u0430\u0457\u0445\u0430\u0432 \u043D\u0430 \u0442\u0435\u0440\u0438\u0442\u043E\u0440\u0456\u044E
 bot.notificator.transport.out=\u0412\u0438\u0457\u0445\u0430\u0432 \u0437 \u0442\u0435\u0440\u0438\u0442\u043E\u0440\u0456\u0457
 bot.notification.transport.done=\u0412\u0438\u043A\u043E\u043D\u0430\u0432 \u043C\u0456\u0441\u0456\u044E
