--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -309,10 +309,10 @@ bot.token.doesnt.need=\u0422\u043E\u043A\u0435\u043D \u0431\u0456\u043B\u044C\u0
 bot.notificator.transport=\u041A\u043E\u043D\u0442\u0440\u0430\u0433\u0435\u043D\u0442: *%1$s*\n\
   \u0412\u043E\u0434\u0456\u0439: %2$s\n\
   \u041F\u0440\u043E\u0434\u0443\u043A\u0446\u0456\u044F: %3$s\n\
-  -------------------------\n\
+  -------------------------
 bot.notificator.transport.in=\u0417\u0430\u0457\u0445\u0430\u0432 \u043D\u0430 \u0442\u0435\u0440\u0438\u0442\u043E\u0440\u0456\u044E
 bot.notificator.transport.out=\u0412\u0438\u0457\u0445\u0430\u0432 \u0437 \u0442\u0435\u0440\u0438\u0442\u043E\u0440\u0456\u0457
-bot.notification.transport.done=\u0412\u0438\u043A\u043E\u043D\u0430\u0432 \u043C\u0456\u0441\u0456\u044E
+bot.notificator.transport.in.done=\u0412\u0438\u043A\u043E\u043D\u0430\u0432 \u043C\u0456\u0441\u0456\u044E
 bot.notificator.brutto=\u0411\u0440\u0443\u0442\u0442\u043E: %1$,.2f
 bot.notificator.tara=\u0422\u0430\u0440\u0430: %1$,.2f
 bot.notificator.netto=\u041D\u0435\u0442\u0442\u043E: %1$,.2f
